--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,9 @@ dependencies {
     implementation 'androidx.room:room-rxjava2:2.4.3'
     kapt 'androidx.room:room-compiler:2.4.3'
 
+    implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.1'
+
+
 
 
 
