--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ ext {
     glideVersion = '4.13.2'
     roomVersion = '2.4.3'
     daggerVersion = '2.28.3'
+    coroutines_version = "1.6.4"
 }
 dependencies {
 
@@ -106,6 +107,9 @@ dependencies {
     implementation "com.google.dagger:dagger:$daggerVersion"
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
+    //coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:$coroutines_version"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
